PharmaFrontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hcp-portal-web
  namespace: hcp-portal
spec:
  selector:
    app: hcp-portal-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
