PharmaFrontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hcp-portal-web
  namespace: hcp-portal
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: FRONTEND_HOST_PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hcp-portal-web
                port:
                  number: 80
